[project]
name = "miu"
version = "0.1.0"
description = ""
authors = [
    {name = "wangshangwen",email = "shangwenwang20@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "base32-tiny (>=0.1.3,<0.2.0)",
    "validators (>=0.34.0,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
